# mid-task-deterministic

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  environment.yml  pyproject.toml  test_overlay.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml
docs/: development.md  releasing.md  timing.md  usage.md
sequences/: practice.csv  run_1.csv  run_2.csv
src/mid_det/: __init__.py  __main__.py  _psychopy.py  calibration.py  config.py  console.py  debug.py  display.py  phases.py  recorder.py  response.py  sequences.py  session.py  setup_wizard.py  trial.py
src/mid_det/io/: __init__.py  bootstrap.py  scanner.py  sequences.py  setup_wizard.py
src/mid_det/io/recording/: __init__.py  csv_writers.py  legacy.py  manifest.py  records.py
src/mid_det/ratings/: __init__.py  __main__.py  core.py  display.py  setup_wizard.py  wizard.py
src/mid_det/task/: __init__.py  display.py  flip_timer.py  instructions.py  phases.py  response.py  trial.py
tests/: test_calibration.py  test_calibration_matlab_parity.py  test_config.py  test_infrastructure.py  test_mid_det.py  test_overlay.py  test_ratings.py  test_recorder.py  test_reward.py  test_scanner.py  test_sequences.py  test_trial_boundary.py
tests/matlab_ref/: calibration_ref.m
text/: instructions_MID.txt  instructions_ratings.txt
