[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mid-task-deterministic"
version = "1.0.0-rc.1"
description = "Deterministic Monetary Incentive Delay Task - PsychoPy implementation for fMRI (no adaptive staircase)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Eric Wang" }]
dependencies = [
    "psychopy>=2026.1",
    "scipy>=1.11",
    "numpy>=1.26",
    "pandas>=2.0",
    "rich>=14.3.3",
    "questionary>=2.0",
    "mcculw>=1.0.0",
    "pyobjc-framework-quartz>=10; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mid-task-det = "mid_det.__main__:run"
mid-ratings-det = "mid_det.ratings.__main__:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.extra-build-dependencies]
pyobjc-framework-quartz = ["pkg_resources"]
